--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,5 +28,6 @@
     },
      "types": ["vitest/globals", "@testing-library/jest-dom"]
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx"]
 }
